--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,11 @@
 {
   "presets": [
-    "@babel/preset-env",
-    "@babel/preset-react"
+    ["@babel/preset-env"],
+    ["@babel/preset-react"]
   ],
-  "plugins": ["babel-plugin-add-module-exports"]  
+  "plugins": [
+    "react-hot-loader/babel",
+    "@babel/plugin-proposal-class-properties",
+    "@babel/transform-runtime"
+  ]
 }
