--- a/package.json
+++ b/package.json
@@ -1,30 +1,51 @@
 {
-  "name": "react-widget-library-starter",
-  "version": "0.0.1",
-  "description": "Produce universal react component library with webpack and es6",
+  "name": "comments-widget",
+  "version": "0.1.0",
+  "description": "React/Redux comments widget",
+  "repository": "https://github.com/freewayspb/react-comments-test.git",
   "main": "lib/react-widget-library.js",
   "scripts": {
     "build": "webpack --env dev && webpack --env build",
     "cypress": "cypress open",
     "dev": "webpack --progress --colors --watch --env dev",
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development --hot",
     "server": "http-server -p 3000",
     "test": "cypress run"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.0",
     "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-transform-runtime": "^7.3.4",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.5",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "cypress": "^3.1.1",
+    "file-loader": "^3.0.1",
     "http-server": "^0.11.1",
+    "json-server": "^0.14.2",
+    "react-hot-loader": "^4.7.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.2.1",
     "yargs": "^10.0.3"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "axios": "^0.18.0",
+    "html-webpack-plugin": "^3.2.0",
+    "i": "^0.3.6",
+    "immutable": "^4.0.0-rc.12",
+    "moment": "^2.24.0",
+    "npm": "^6.9.0",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.2",
+    "styled-components": "^4.1.3",
+    "webfontloader": "^1.6.28"
   }
 }
